10: disabling start